@@ -141,6 +141,8 @@ contains
     use glimmer_ncdf
     use glimmer_map_types
     use glimmer_log
+    use glimmer_paramets
+    use glimmer_scales
     implicit none
     type(glimmer_nc_output), pointer :: outfile
     type(glide_global_type) :: model
@@ -220,7 +222,7 @@ contains
     end do
   end subroutine NAME_io_readall
 
-  subroutine NAME_io_read(infile,data,scale_vars)
+  subroutine NAME_io_read(infile,data)
     !*FD read variables from a netCDF file
     use glimmer_log
     use glimmer_ncdf
@@ -232,17 +234,12 @@ contains
     !*FD structure containg output netCDF descriptor
     type(DATATYPE) :: data
     !*FD the model instance
-    logical,optional :: scale_vars
-    !*FD Specifies whether fields should be scaled by factors when read in.
 
     ! local variables
     integer status,varid
     integer up
-    logical :: scale=.true.
+    real(dp) :: scaling_factor
 
-    ! Deal with optional argument
-    if (present(scale_vars)) scale=scale_vars
-   
     ! read variables
     !GENVAR_READ!
   end subroutine NAME_io_read
